[package]
name = "poc_rust"
version = "0.1.0"
authors = ["Lucas Oliveira <jucas.oliveira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0.104", features = ["derive"]}